[tool.poetry]
name = "streamtoolkit_omkar"
version = "0.1.0"
description = "Reusable dev toolkit for AWS + Streamlit + GPT workflows"
authors = ["Omkar Sawant Bhosle <omkarsbdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "*"
boto3 = "*"
click = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
