[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "streamtoolkit-omkar"
version = "0.1.0"
description = "Omkar's unified Streamlit toolkit for cloud-friendly dev"
authors = [
  { name = "Omkar Sawant Bhosle", email = "omkarsb@gmail.com" }
]
dependencies = []
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
